2006-07-30  Joseph S. Myers  <joseph@codesourcery.com>

	[BZ #3018]
	* Makefile (extra-objs): Add modules to extra-test-objs instead.

2006-08-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define
	_XOPEN_REALTIME_THREADS.

2006-08-15  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/clock_settime.c (INTERNAL_VSYSCALL): Use
	HAVE_CLOCK_GETRES_VSYSCALL as guard macro rather than
	HAVE_CLOCK_GETTIME_VSYSCALL.
	(maybe_syscall_settime_cpu): Use plain INTERNAL_VSYSCALL here.

2006-08-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h
	(_POSIX_THREAD_PRIO_PROTECT): Define to 200112L.
	* descr.h (struct priority_protection_data): New type.
	(struct pthread): Add tpp field.
	* pthreadP.h (PTHREAD_MUTEX_PP_NORMAL_NP,
	PTHREAD_MUTEX_PP_RECURSIVE_NP, PTHREAD_MUTEX_PP_ERRORCHECK_NP,
	PTHREAD_MUTEX_PP_ADAPTIVE_NP): New enum values.
	* pthread_mutex_init.c (__pthread_mutex_init): Handle non-robust
	TPP mutexes.
	* pthread_mutex_lock.c (__pthread_mutex_lock): Handle TPP mutexes.
	* pthread_mutex_trylock.c (__pthread_mutex_trylock): Likewise.
	* pthread_mutex_timedlock.c (pthread_mutex_timedlock): Likewise.
	* pthread_mutex_unlock.c (__pthread_mutex_unlock_usercnt): Likewise.
	* tpp.c: New file.
	* pthread_setschedparam.c (__pthread_setschedparam): Handle priority
	boosted by TPP.
	* pthread_setschedprio.c (pthread_setschedprio): Likewise.
	* pthread_mutexattr_getprioceiling.c
	(pthread_mutexattr_getprioceiling): If ceiling is 0, ensure it is
	in the SCHED_FIFO priority range.
	* pthread_mutexattr_setprioceiling.c
	(pthread_mutexattr_setprioceiling): Fix prioceiling validation.
	* pthread_mutex_getprioceiling.c (pthread_mutex_getprioceiling): Fail
	if mutex is not TPP.  Ceiling is now in __data.__lock.
	* pthread_mutex_setprioceiling.c: Include stdbool.h.
	(pthread_mutex_setprioceiling): Fix prioceiling validation.  Ceiling
	is now in __data.__lock.  Add locking.